# cohere-chat-classifier

./: .env_sample  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
cohere_chat_classifier/: api.py  client.py  cohere_model.py  data_model.py  evaluation.py  helpers.py
tests/cohere_chat_classifier/: test_cohere_model.py  test_data_model.py  test_helpers.py
tests/theydo/: test_cohere_model.py  test_data_model.py
theydo/: __init__.py  api.py  client.py  cohere_model.py  config.yaml  data_model.py  evaluation.py  exceptions.py  helpers.py
