[tool.poetry]
name = "theydo"
version = "0.1.0"
description = "Repository for TheyDo take-home assignment."
authors = ["Vera Samoili"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
